tests/negative/test_ind_owning_non_ref.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc bar () (Foo 2) {
    sym f:(Foo 2);
    ret (>> f);
};

fnc main () () {
    [] (bar) 0;
};